Fixed positions page on mobile

--- a/assets/sass/layout/_positionCard.scss
+++ b/assets/sass/layout/_positionCard.scss
@@ -10,9 +10,15 @@
     padding-bottom: 14vh;
 }
 
+@media (min-width: 600px) {
+    .position__card {
+        max-width: 35vw;
+    }
+}
+
 .position__card {
     min-height: 20vh;
-    max-width: 35vw;
+    min-width: 35vw;
     background-color: hsla(275, 55%, 33%, 0.102);
     border-radius: 5%;
     box-shadow: 0px 6px 15px 0px rgba(39,76,103,0.10);
